objects/Custom_SWDL_Request__c.object
<CustomObject>
    <description>PS Software Delivery Requests</description>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Product__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Enterprise - Business Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>EMG - Customer Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom SWDL Requests (End User Account)</relationshipLabel>
        <relationshipName>Custom_SWDL_Requests_EndUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FTP_Comments__c</fullName>
        <label>FTP Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FTP_Password__c</fullName>
        <label>FTP Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Server__c</fullName>
        <formula>IF ( ISBLANK(FTP_User__c), &apos;&apos;,
(IF(LEFT(FTP_User__c,4) = &apos;cpna&apos;, &apos;ftpus.genesys.com&apos;, &apos;ftpnl.genesys.com&apos;))
)</formula>
        <label>FTP Server</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_User__c</fullName>
        <label>FTP User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text1__c</fullName>
        <formula>$Label.CustomSwdlHelpText1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Information:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Information__c</fullName>
        <label>License Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_when_Request_Fulfilled__c</fullName>
        <defaultValue>$User.Email &amp;&apos;, &apos;&amp;
&apos;PSReleaseRequest@genesys.com&apos;</defaultValue>
        <label>Notify when Request Fulfilled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_units_seats__c</fullName>
        <label>Number of units/seats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating System</label>
        <referenceTo>Operating_System__c</referenceTo>
        <relationshipLabel>Custom SWDL Requests</relationshipLabel>
        <relationshipName>Custom_SWDL_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select PS Custom Application</inlineHelpText>
        <label>Support Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Support_Product__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>Support_Product__c.Parent_Product__r.Product_Name__c</field>
                <operation>equals</operation>
                <value>Solution: N/A - Custom Application</value>
            </filterItems>
            <infoMessage>Custom PS Applications products</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Custom SWDL Requests</relationshipLabel>
        <relationshipName>Custom_SWDL_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_SWDL_Requests_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>EMG - Customer Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Enterprise - Business Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom SWDL Requests</relationshipLabel>
        <relationshipName>Custom_SWDL_Requests_SoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Environment_Type__c</fullName>
        <label>Target Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation</fullName>
                    <default>true</default>
                    <label>Evaluation</label>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Guide__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015U0000003edrZ&quot;, &quot;Click to Open&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>Latest or specific version</inlineHelpText>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Needed__c</fullName>
        <label>When Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test_legalinfo__c</fullName>
        <defaultValue>$Label.CustomSwdlHelpText1</defaultValue>
        <label>test legalinfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom SWDL Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Product__c</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SwdlReq-{000000}</displayFormat>
        <label>Custom SWDL Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom SWDL Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>